fix(cta-button): added content padding to center align

--- a/src/less/cta-button/cta-button.less
+++ b/src/less/cta-button/cta-button.less
@@ -62,6 +62,7 @@ a.cta-btn--large {
     border-radius: calc(@button-height-large / 2);
     font-size: @font-size-16;
     min-height: @button-height-large;
+    padding: @button-padding-vertical-large @button-padding-horizontal;
 }
 
 a.cta-btn--large-truncated {
@@ -69,9 +70,11 @@ a.cta-btn--large-truncated {
 
     font-size: @font-size-16;
     height: @button-height-large;
+    padding: @button-padding-vertical-large @button-padding-horizontal;
 }
 
 a.cta-btn--large-fixed-height {
     font-size: @font-size-16;
     height: @button-height-large;
+    padding: @button-padding-vertical-large @button-padding-horizontal;
 }
